--- a/scripts_python/abrindo csv.ipynb
+++ b/scripts_python/abrindo csv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -56,78 +56,72 @@
    ],
    "source": [
     "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.functions import col, regexp_replace\n",
     "import requests\n",
     "import json\n",
     "\n",
-    "df = spark.read.json(\"bases/books.json\")\n",
+    "df = spark.read.json(\"/home/naum/studies/bases/books.json\")\n",
     "df.printSchema()\n",
     "df.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- _id: string (nullable = true)\n",
+      " |-- authors: array (nullable = true)\n",
+      " |    |-- element: string (containsNull = true)\n",
+      " |-- categories: array (nullable = true)\n",
+      " |    |-- element: string (containsNull = true)\n",
+      " |-- isbn: string (nullable = true)\n",
+      " |-- longDescription: string (nullable = true)\n",
+      " |-- pageCount: long (nullable = true)\n",
+      " |-- publishedDate: struct (nullable = true)\n",
+      " |    |-- $date: string (nullable = true)\n",
+      " |-- shortDescription: string (nullable = true)\n",
+      " |-- status: string (nullable = true)\n",
+      " |-- thumbnailUrl: string (nullable = true)\n",
+      " |-- title: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "df.printSchema()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---+--------------------+--------------------+----------+--------------------+---------+--------------------+--------------------+-------+--------------------+--------------------+\n",
-      "|_id|             authors|          categories|      isbn|     longDescription|pageCount|       publishedDate|    shortDescription| status|        thumbnailUrl|               title|\n",
-      "+---+--------------------+--------------------+----------+--------------------+---------+--------------------+--------------------+-------+--------------------+--------------------+\n",
-      "|  1|[W. Frank Ableson...|[Open Source, Mob...|1933988673|Android is an ope...|    416.0|{2009-04-01T00:00...|Unlocking Android...|PUBLISH|https://s3.amazon...|   Unlocking Android|\n",
-      "|  2|[W. Frank Ableson...|              [Java]|1935182722|When it comes to ...|    592.0|{2011-01-14T00:00...|Android in Action...|PUBLISH|https://s3.amazon...|Android in Action...|\n",
-      "|  3|       [Gojko Adzic]|[Software Enginee...|1617290084|                NULL|      0.0|{2011-06-03T00:00...|                NULL|PUBLISH|https://s3.amazon...|Specification by ...|\n",
-      "|  4|[Tariq Ahmed with...|          [Internet]|1933988746|New web applicati...|    576.0|{2009-02-02T00:00...|                NULL|PUBLISH|https://s3.amazon...|    Flex 3 in Action|\n",
-      "|  5|[Tariq Ahmed, Dan...|          [Internet]|1935182420|Using Flex, you c...|    600.0|{2010-11-15T00:00...|                NULL|PUBLISH|https://s3.amazon...|    Flex 4 in Action|\n",
-      "|  6|       [Satnam Alag]|          [Internet]|1933988312|There's a great d...|    425.0|{2008-10-01T00:00...|                NULL|PUBLISH|https://s3.amazon...|Collective Intell...|\n",
-      "|  7|[Rob Allen, Nick ...|   [Web Development]|1933988320|From rather humbl...|    432.0|{2008-12-01T00:00...|Zend Framework in...|PUBLISH|https://s3.amazon...|Zend Framework in...|\n",
-      "|  8|[Bernerd Allmon, ...|          [Internet]|1933988797|In the demo, a hi...|    265.0|{2010-10-15T00:00...|   A beautifully ...|PUBLISH|https://s3.amazon...|        Flex on Java|\n",
-      "|  9|[Andres Almiray, ...|              [Java]|1935182234|Although several ...|    375.0|{2012-06-04T00:00...|Griffon in Action...|PUBLISH|https://s3.amazon...|   Griffon in Action|\n",
-      "| 10|[Alexandre de Cas...|              [Java]|193518217X|A good applicatio...|    325.0|{2011-12-12T00:00...|Enterprise OSGi s...|PUBLISH|https://s3.amazon...|       OSGi in Depth|\n",
-      "| 11|   [Peter Armstrong]|   [Web Development]|1933988509|Rails is a fantas...|    592.0|{2008-01-01T00:00...|\"Flexible Rails c...|PUBLISH|https://s3.amazon...|      Flexible Rails|\n",
-      "| 13|   [Peter Armstrong]|          [Internet]|1933988762|With Flex 4 you c...|    258.0|{2009-11-01T00:00...|Hello! Flex 4 pro...|PUBLISH|https://s3.amazon...|       Hello! Flex 4|\n",
-      "| 14|[Levi Asher, Chri...|     [Miscellaneous]|1884777384|Coffeehouse is an...|    316.0|{1997-07-01T00:00...|Coffeehouse is an...|PUBLISH|https://s3.amazon...|         Coffeehouse|\n",
-      "| 15|       [Jamil Azher]|    [Microsoft .NET]|1933988592|In complex softwa...|    344.0|{2008-12-01T00:00...|                NULL|PUBLISH|https://s3.amazon...|Team Foundation S...|\n",
-      "| 16|[Kyle Baley, Dona...|         [Microsoft]|1933988711|It's easy to get ...|    550.0|{2010-04-16T00:00...|Brownfield Applic...|PUBLISH|https://s3.amazon...|Brownfield Applic...|\n",
-      "| 17|       [Kyle Banker]|[Next Generation ...|1935182870|MongoDB is a docu...|      0.0|{2011-12-12T00:00...|MongoDB In Action...|PUBLISH|https://s3.amazon...|   MongoDB in Action|\n",
-      "| 18|[Michael J. Barlo...|      [PowerBuilder]|1884777686|Distributed Appli...|    504.0|{1998-06-01T00:00...|                NULL|PUBLISH|                NULL|Distributed Appli...|\n",
-      "| 19|  [Michael Barlotta]|[PowerBuilder, Cl...|1884777864|Jaguar Developmen...|    550.0|{1999-08-01T00:00...|Jaguar Developmen...|PUBLISH|https://s3.amazon...|Jaguar Developmen...|\n",
-      "| 20|[Michael J. Barlo...|      [PowerBuilder]|1884777686|Taming Jaguar is ...|    362.0|{2000-07-01T00:00...|                NULL|PUBLISH|https://s3.amazon...|       Taming Jaguar|\n",
-      "| 21|   [Jon Barrilleaux]|[Java, Computer G...|1884777902|3D User Interface...|    520.0|{2000-08-01T00:00...|                NULL|PUBLISH|https://s3.amazon...|3D User Interface...|\n",
-      "+---+--------------------+--------------------+----------+--------------------+---------+--------------------+--------------------+-------+--------------------+--------------------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Read JSON file into dataframe\n",
     "df = spark.read.format('org.apache.spark.sql.json') \\\n",
-    "        .load(\"bases/books.json\")\n",
+    "        .load(\"/home/naum/studies/bases/books.json\")\n",
     "        \n",
     "# Changing datatypes\n",
     "df = df.withColumn(\"authors\", col(\"authors\").cast(\"string\")) \\\n",
     "       .withColumn(\"categories\", col(\"categories\").cast(\"string\")) \\\n",
     "       .withColumn(\"publishedDate\", col(\"publishedDate\").cast(\"string\")) \\\n",
     "       .withColumn(\"pageCount\", col(\"pageCount\").cast(\"float\"))\n",
-    "\n",
-    "df.show()"
+    "       \n",
+    "# Removing [ e ]       \n",
+    "df = df.withColumn(\"authors\", regexp_replace(col(\"authors\"), \"[\\[\\]]\", \"\")) \\\n",
+    "        .withColumn(\"categories\", regexp_replace(col(\"categories\"), \"[\\[\\]]\", \"\")) \\\n",
+    "        .withColumn(\"publishedDate\", regexp_replace(col(\"publishedDate\"), \"[{}]\", \"\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -137,26 +131,26 @@
       "+---+--------------------+--------------------+----------+--------------------+---------+--------------------+--------------------+-------+--------------------+--------------------+\n",
       "|_id|             authors|          categories|      isbn|     longDescription|pageCount|       publishedDate|    shortDescription| status|        thumbnailUrl|               title|\n",
       "+---+--------------------+--------------------+----------+--------------------+---------+--------------------+--------------------+-------+--------------------+--------------------+\n",
-      "|  1|[W. Frank Ableson...|[Open Source, Mob...|1933988673|Android is an ope...|    416.0|{2009-04-01T00:00...|Unlocking Android...|PUBLISH|https://s3.amazon...|   Unlocking Android|\n",
-      "|  2|[W. Frank Ableson...|              [Java]|1935182722|When it comes to ...|    592.0|{2011-01-14T00:00...|Android in Action...|PUBLISH|https://s3.amazon...|Android in Action...|\n",
-      "|  3|       [Gojko Adzic]|[Software Enginee...|1617290084|                NULL|      0.0|{2011-06-03T00:00...|                NULL|PUBLISH|https://s3.amazon...|Specification by ...|\n",
-      "|  4|[Tariq Ahmed with...|          [Internet]|1933988746|New web applicati...|    576.0|{2009-02-02T00:00...|                NULL|PUBLISH|https://s3.amazon...|    Flex 3 in Action|\n",
-      "|  5|[Tariq Ahmed, Dan...|          [Internet]|1935182420|Using Flex, you c...|    600.0|{2010-11-15T00:00...|                NULL|PUBLISH|https://s3.amazon...|    Flex 4 in Action|\n",
-      "|  6|       [Satnam Alag]|          [Internet]|1933988312|There's a great d...|    425.0|{2008-10-01T00:00...|                NULL|PUBLISH|https://s3.amazon...|Collective Intell...|\n",
-      "|  7|[Rob Allen, Nick ...|   [Web Development]|1933988320|From rather humbl...|    432.0|{2008-12-01T00:00...|Zend Framework in...|PUBLISH|https://s3.amazon...|Zend Framework in...|\n",
-      "|  8|[Bernerd Allmon, ...|          [Internet]|1933988797|In the demo, a hi...|    265.0|{2010-10-15T00:00...|   A beautifully ...|PUBLISH|https://s3.amazon...|        Flex on Java|\n",
-      "|  9|[Andres Almiray, ...|              [Java]|1935182234|Although several ...|    375.0|{2012-06-04T00:00...|Griffon in Action...|PUBLISH|https://s3.amazon...|   Griffon in Action|\n",
-      "| 10|[Alexandre de Cas...|              [Java]|193518217X|A good applicatio...|    325.0|{2011-12-12T00:00...|Enterprise OSGi s...|PUBLISH|https://s3.amazon...|       OSGi in Depth|\n",
-      "| 11|   [Peter Armstrong]|   [Web Development]|1933988509|Rails is a fantas...|    592.0|{2008-01-01T00:00...|\"Flexible Rails c...|PUBLISH|https://s3.amazon...|      Flexible Rails|\n",
-      "| 13|   [Peter Armstrong]|          [Internet]|1933988762|With Flex 4 you c...|    258.0|{2009-11-01T00:00...|Hello! Flex 4 pro...|PUBLISH|https://s3.amazon...|       Hello! Flex 4|\n",
-      "| 14|[Levi Asher, Chri...|     [Miscellaneous]|1884777384|Coffeehouse is an...|    316.0|{1997-07-01T00:00...|Coffeehouse is an...|PUBLISH|https://s3.amazon...|         Coffeehouse|\n",
-      "| 15|       [Jamil Azher]|    [Microsoft .NET]|1933988592|In complex softwa...|    344.0|{2008-12-01T00:00...|                NULL|PUBLISH|https://s3.amazon...|Team Foundation S...|\n",
-      "| 16|[Kyle Baley, Dona...|         [Microsoft]|1933988711|It's easy to get ...|    550.0|{2010-04-16T00:00...|Brownfield Applic...|PUBLISH|https://s3.amazon...|Brownfield Applic...|\n",
-      "| 17|       [Kyle Banker]|[Next Generation ...|1935182870|MongoDB is a docu...|      0.0|{2011-12-12T00:00...|MongoDB In Action...|PUBLISH|https://s3.amazon...|   MongoDB in Action|\n",
-      "| 18|[Michael J. Barlo...|      [PowerBuilder]|1884777686|Distributed Appli...|    504.0|{1998-06-01T00:00...|                NULL|PUBLISH|                NULL|Distributed Appli...|\n",
-      "| 19|  [Michael Barlotta]|[PowerBuilder, Cl...|1884777864|Jaguar Developmen...|    550.0|{1999-08-01T00:00...|Jaguar Developmen...|PUBLISH|https://s3.amazon...|Jaguar Developmen...|\n",
-      "| 20|[Michael J. Barlo...|      [PowerBuilder]|1884777686|Taming Jaguar is ...|    362.0|{2000-07-01T00:00...|                NULL|PUBLISH|https://s3.amazon...|       Taming Jaguar|\n",
-      "| 21|   [Jon Barrilleaux]|[Java, Computer G...|1884777902|3D User Interface...|    520.0|{2000-08-01T00:00...|                NULL|PUBLISH|https://s3.amazon...|3D User Interface...|\n",
+      "|  1|W. Frank Ableson,...| Open Source, Mobile|1933988673|Android is an ope...|    416.0|2009-04-01T00:00:...|Unlocking Android...|PUBLISH|https://s3.amazon...|   Unlocking Android|\n",
+      "|  2|W. Frank Ableson,...|                Java|1935182722|When it comes to ...|    592.0|2011-01-14T00:00:...|Android in Action...|PUBLISH|https://s3.amazon...|Android in Action...|\n",
+      "|  3|         Gojko Adzic|Software Engineering|1617290084|                NULL|      0.0|2011-06-03T00:00:...|                NULL|PUBLISH|https://s3.amazon...|Specification by ...|\n",
+      "|  4|Tariq Ahmed with ...|            Internet|1933988746|New web applicati...|    576.0|2009-02-02T00:00:...|                NULL|PUBLISH|https://s3.amazon...|    Flex 3 in Action|\n",
+      "|  5|Tariq Ahmed, Dan ...|            Internet|1935182420|Using Flex, you c...|    600.0|2010-11-15T00:00:...|                NULL|PUBLISH|https://s3.amazon...|    Flex 4 in Action|\n",
+      "|  6|         Satnam Alag|            Internet|1933988312|There's a great d...|    425.0|2008-10-01T00:00:...|                NULL|PUBLISH|https://s3.amazon...|Collective Intell...|\n",
+      "|  7|Rob Allen, Nick L...|     Web Development|1933988320|From rather humbl...|    432.0|2008-12-01T00:00:...|Zend Framework in...|PUBLISH|https://s3.amazon...|Zend Framework in...|\n",
+      "|  8|Bernerd Allmon, J...|            Internet|1933988797|In the demo, a hi...|    265.0|2010-10-15T00:00:...|   A beautifully ...|PUBLISH|https://s3.amazon...|        Flex on Java|\n",
+      "|  9|Andres Almiray, D...|                Java|1935182234|Although several ...|    375.0|2012-06-04T00:00:...|Griffon in Action...|PUBLISH|https://s3.amazon...|   Griffon in Action|\n",
+      "| 10|Alexandre de Cast...|                Java|193518217X|A good applicatio...|    325.0|2011-12-12T00:00:...|Enterprise OSGi s...|PUBLISH|https://s3.amazon...|       OSGi in Depth|\n",
+      "| 11|     Peter Armstrong|     Web Development|1933988509|Rails is a fantas...|    592.0|2008-01-01T00:00:...|\"Flexible Rails c...|PUBLISH|https://s3.amazon...|      Flexible Rails|\n",
+      "| 13|     Peter Armstrong|            Internet|1933988762|With Flex 4 you c...|    258.0|2009-11-01T00:00:...|Hello! Flex 4 pro...|PUBLISH|https://s3.amazon...|       Hello! Flex 4|\n",
+      "| 14|Levi Asher, Chris...|       Miscellaneous|1884777384|Coffeehouse is an...|    316.0|1997-07-01T00:00:...|Coffeehouse is an...|PUBLISH|https://s3.amazon...|         Coffeehouse|\n",
+      "| 15|         Jamil Azher|      Microsoft .NET|1933988592|In complex softwa...|    344.0|2008-12-01T00:00:...|                NULL|PUBLISH|https://s3.amazon...|Team Foundation S...|\n",
+      "| 16|Kyle Baley, Donal...|           Microsoft|1933988711|It's easy to get ...|    550.0|2010-04-16T00:00:...|Brownfield Applic...|PUBLISH|https://s3.amazon...|Brownfield Applic...|\n",
+      "| 17|         Kyle Banker|Next Generation D...|1935182870|MongoDB is a docu...|      0.0|2011-12-12T00:00:...|MongoDB In Action...|PUBLISH|https://s3.amazon...|   MongoDB in Action|\n",
+      "| 18| Michael J. Barlotta|        PowerBuilder|1884777686|Distributed Appli...|    504.0|1998-06-01T00:00:...|                NULL|PUBLISH|                NULL|Distributed Appli...|\n",
+      "| 19|    Michael Barlotta|PowerBuilder, Cli...|1884777864|Jaguar Developmen...|    550.0|1999-08-01T00:00:...|Jaguar Developmen...|PUBLISH|https://s3.amazon...|Jaguar Developmen...|\n",
+      "| 20|Michael J. Barlot...|        PowerBuilder|1884777686|Taming Jaguar is ...|    362.0|2000-07-01T00:00:...|                NULL|PUBLISH|https://s3.amazon...|       Taming Jaguar|\n",
+      "| 21|     Jon Barrilleaux|Java, Computer Gr...|1884777902|3D User Interface...|    520.0|2000-08-01T00:00:...|                NULL|PUBLISH|https://s3.amazon...|3D User Interface...|\n",
       "+---+--------------------+--------------------+----------+--------------------+---------+--------------------+--------------------+-------+--------------------+--------------------+\n",
       "only showing top 20 rows\n",
       "\n"
