--- a/scripts_python/abrindo csv.ipynb
+++ b/scripts_python/abrindo csv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -59,6 +59,7 @@
     "from pyspark.sql.functions import col, regexp_replace\n",
     "import requests\n",
     "import json\n",
+    "from sqlalchemy import create_engine\n",
     "\n",
     "df = spark.read.json(\"/home/naum/studies/bases/books.json\")\n",
     "df.printSchema()\n",
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -161,6 +162,34 @@
     "csv_file_path = \"/home/naum/studies/bases/books.csv\"\n",
     "df.write.csv(csv_file_path, header=True, mode=\"overwrite\")\n",
     "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "431"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Converter DataFrame do PySpark para DataFrame do pandas\n",
+    "df_pandas = df.toPandas()\n",
+    "\n",
+    "# Configurações de conexão com o banco de dados PostgreSQL\n",
+    "engine = create_engine('postgresql://postgres:changeme@localhost:5432/postgres')\n",
+    "\n",
+    "# Escrever DataFrame do pandas no banco de dados PostgreSQL\n",
+    "# 'books' é o nome da tabela em que você deseja salvar os dados\n",
+    "df_pandas.to_sql(\"books\", con=engine, if_exists=\"append\", index=False)"
    ]
   }
  ],
