--- a/scripts_python/Desafio_Modulo_4.ipynb
+++ b/scripts_python/Desafio_Modulo_4.ipynb
@@ -62,23 +62,19 @@
    "source": [
     "from pyspark.sql import SparkSession\n",
     "import pyspark.sql.functions as F\n",
-    "import requests #biblioteca para trazer dados de uma URL\n",
-    "import json #biblioteca para ler json\n",
     "\n",
     "# Criar uma sessão Spark\n",
     "spark = SparkSession.builder \\\n",
-    "    .appName(\"Contagem de Linhas\") \\\n",
+    "    .appName(\"Desafio_Modulo_4\") \\\n",
     "    .getOrCreate()\n",
     "\n",
     "# Ler o arquivo CSV e criar um DataFrame\n",
     "caminho_arquivo = '/databricks-datasets/COVID/coronavirusdataset/Case.csv'\n",
     "df = spark.read.csv(caminho_arquivo, header=True, inferSchema=True)\n",
     "\n",
-    "# Ler o arquivo CSV e criar um DataFrame\n",
     "caminho_arquivo = '/databricks-datasets/COVID/coronavirusdataset/PatientInfo.csv'\n",
     "df_1 = spark.read.csv(caminho_arquivo, header=True, inferSchema=True)\n",
     "\n",
-    "# Ler o arquivo CSV e criar um DataFrame\n",
     "caminho_arquivo = '/databricks-datasets/COVID/coronavirusdataset/PatientRoute.csv'\n",
     "df_2 = spark.read.csv(caminho_arquivo, header=True, inferSchema=True)\n",
     "\n",
